Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-20415

QComboBox crash on currentIndexChanged

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.4.0 Beta
    • 4.7.3, 5.4.0 Alpha
    • None
    • Fedora 12

      In my app under certain conditions the model of the QComboBox is reset directly following the currentIndexChanged event. This results in a crash because the QModelIndex becomes invalid, but is still being used in qcombobox.cpp. See attached patch for more info.

        For Gerrit Dashboard: QTBUG-20415
        # Subject Branch Project Status CR V

            ablasche Alex Blasche
            gpwright Geoff Wright
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes